Little code review- change the names names in js to more accurately indicate their purpose, add new functionality -  pressure, little reduction in component size

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <div class="main-info">
                 <div>
                     <h3 class="city-name"></h3>
-                    <input type=" text" placeholder="Enter a city name"><button>Wyślij</button>
+                    <input class="enterCityName" type=" text" placeholder="Enter a city name"><button>Wyślij</button>
                     <p class="warning"></p>
                 </div>
                 <img src="" alt="Weather photo" class="photo">
@@ -28,11 +28,13 @@
                 <p>Weather:</p>
                 <p>Temperature:</p>
                 <p>Humidity:</p>
+                <p>Pressure:</p>
             </div>
             <div class="weather-info">
                 <p class="weather"></p>
                 <p class="temp"></p>
                 <p class="humidity"></p>
+                <p class="pressure"></p>
             </div>
         </div>
     </div>
