Add listener on speach recognition end, what causes  that when user stop speaking it is created new promise and user see weather informaton it is working like sned button

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <div class="main-info">
                 <div>
                     <h3 class="city-name"></h3>
-                    <input class="enterCityName" type=" text" placeholder="Enter a city name"><button>Wyślij</button>
+                    <input class="enterCityName" type=" text" placeholder="Enter a city name"><button>Send</button>
                     <p class="warning"></p>
                 </div>
                 <img src="" alt="Weather photo" class="photo">
