add control for the speech recogition

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
                 <div>
                     <h3 class="city-name"></h3>
                     <input class="enterCityName" type=" text" placeholder="Enter a city name"><button>Send</button>
+                    <button class="microphone">Klick</button>
                     <p class="warning"></p>
                 </div>
                 <img src="" alt="Weather photo" class="photo">
