Readme update, add microphone icon to the button

--- a/src/template.html
+++ b/src/template.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.7/css/all.css">
 
 
 
@@ -18,7 +19,7 @@
         <div>
           <h3 class="city-name"></h3>
           <input class="enterCityName" type=" text" placeholder="Enter a city name"><button>Send</button>
-          <button class="microphone">Klick</button>
+          <button class="microphone"><i class="fas fa-microphone"></i></button>
           <p class="warning"></p>
         </div>
         <img src="" alt="Weather photo" class="photo">
