--- a/src/template.html
+++ b/src/template.html
@@ -12,34 +12,38 @@
 </head>
 
 <body>
-  <div class="wrapper">
-    <div class="top">
-      <h1>weather app</h1>
-      <div class="main-info">
-        <div>
-          <h3 class="city-name"></h3>
-          <input class="enterCityName" type=" text" placeholder="Enter a city name"><button>Send</button>
-          <button class="microphone"><i class="fas fa-microphone"></i></button>
-          <p class="warning"></p>
+
+  <section class="weather-APP">
+    <div class="weather-APP__overlayer"></div>
+    <div class="wrapper">
+      <div class="top">
+        <h1>weather app</h1>
+        <div class="main-info">
+          <div>
+            <h3 class="city-name"></h3>
+            <input class="enterCityName" type=" text" placeholder="Enter a city name"><button>Send</button>
+            <button class="microphone"><i class="fas fa-microphone"></i></button>
+            <p class="warning"></p>
+          </div>
+          <img src="" alt="Weather photo" class="photo">
         </div>
-        <img src="" alt="Weather photo" class="photo">
+      </div>
+      <div class="bottom">
+        <div class="headings">
+          <p>Weather:</p>
+          <p>Temperature:</p>
+          <p>Humidity:</p>
+          <p>Pressure:</p>
+        </div>
+        <div class="weather-info">
+          <p class="weather"></p>
+          <p class="temp"></p>
+          <p class="humidity"></p>
+          <p class="pressure"></p>
+        </div>
       </div>
     </div>
-    <div class="bottom">
-      <div class="headings">
-        <p>Weather:</p>
-        <p>Temperature:</p>
-        <p>Humidity:</p>
-        <p>Pressure:</p>
-      </div>
-      <div class="weather-info">
-        <p class="weather"></p>
-        <p class="temp"></p>
-        <p class="humidity"></p>
-        <p class="pressure"></p>
-      </div>
-    </div>
-  </div>
+  </section>
 
 </body>
 
