Code improve - shoten code scss writing

--- a/src/template.html
+++ b/src/template.html
@@ -6,9 +6,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.7/css/all.css">
-
-
-
 </head>
 
 <body>
@@ -16,13 +13,11 @@
   <section class="weather-APP">
     <div class="weather-APP__overlayer"></div>
     <div class="wrapper">
-      <div class="left">
+      <div class="data-information-input-container">
         <div class="main-info">
           <div>
             <div class="main-info__time">09.53</div>
             <div class="main-info__data">Starurday Jan 29</div>
-
-
             <input class="enterCityName" type=" text" placeholder="Enter a city name"><button>Send</button>
             <button class="microphone"><i class="fas fa-microphone"></i></button>
             <p class="warning"></p>
@@ -30,11 +25,10 @@
 
         </div>
       </div>
-      <div class="right">
+      <div class="weather-main-information">
+
         <h3 class="city-name"></h3>
-
         <div class="weather-info-container">
-
           <div class="weather-info__parameters">
             <p class="temp"></p>
             <p class="weather"></p>
@@ -44,7 +38,6 @@
             <div class="weather-info__pressure-items">
               <p class="pressure"></p>
             </div>
-
           </div>
 
           <img src="" alt="Weather photo" class="photo">
