Add resposible styles on application

--- a/src/template.html
+++ b/src/template.html
@@ -18,29 +18,28 @@
           <div>
             <div class="main-info__time">09.53</div>
             <div class="main-info__data">Starurday Jan 29</div>
-            <input class="enterCityName" type=" text" placeholder="Enter a city name"><button>Send</button>
-            <button class="microphone"><i class="fas fa-microphone"></i></button>
-            <p class="warning"></p>
+            <input class="main-info__enterCityName" type=" text" placeholder="Enter a city name">
+            <button class="main-info__sendControl">Send</button>
+            <button class="main-info__microphone"><i class="fas fa-microphone"></i></button>
+            <p class="main-info__warning"></p>
           </div>
-
         </div>
       </div>
-      <div class="weather-main-information">
 
+      <div class="weather-main-information">
         <h3 class="city-name"></h3>
-        <div class="weather-info-container">
+        <div class="weather-info">
           <div class="weather-info__parameters">
-            <p class="temp"></p>
-            <p class="weather"></p>
+            <p class="weather-info__temp"></p>
+            <p class="weather-info__weather"></p>
             <div class="weather-info__humidity-items">
-              <p class="humidity"></p>
+              <p class="weather-info__humidity"></p>
             </div>
             <div class="weather-info__pressure-items">
-              <p class="pressure"></p>
+              <p class="weather-info__pressure"></p>
             </div>
           </div>
-
-          <img src="" alt="Weather photo" class="photo">
+          <img src="" alt="Weather photo" class="weather-info__photo">
         </div>
       </div>
     </div>
